# sincomp

./: .gitattributes  .gitignore  LICENSE  README.md  cluster.py  crawl.py  dae.ipynb  denoise.py  encode.ipynb  encode2.ipynb  encoder.py  encoder2.py  json2csv.py  pyproject.toml  recon.py
.github/workflows/: compatibility_test.yml  publish.yml  python-publish.yml  unit_test.yml
data/: ccr_chi2.csv  ccr_entropy.csv  characters.csv  compliance_l1.csv  compliance_l2.csv  dialect.csv  dialects.csv  guanhua.csv  huiyu.csv  jinyu.csv  location.csv  mandarin.csv  xiangyu.csv
data/embeddings/linear_encoder_100_100_100_1_1/: initial_bias.csv  tone.csv
data/xiaoxue/csv/: char.csv  dialect.csv  ganyu.csv  keyu.csv  middle_chinese.csv  minyu.csv  otherdialects.csv  pinghua.csv  wuyu.csv
notebooks/: dae.ipynb  encode.ipynb  linear_encoder1.ipynb
scripts/: compliance.py  encode.py  encoder.py  isogloss.bat  isogloss.py  mkdict.py  model.py  recon.py  similarity.py  web.py
scripts/xiaoxue/: dae.ipynb  encoder.py  get_dialect_info.py  json2csv.py  json2mc.py  recon.py
scripts/xiaoxuetang/: crawl.py  json2csv.py  recon.py
scripts/zhongguoyuyan/: character_cluster.ipynb  compare.ipynb  contrast.ipynb  crawl.py  homophone.ipynb  homophone.py  predictor.ipynb  predictor.py  similarity.py  test_homophone.ipynb  test_predictor.ipynb  util.py  web.py
sincomp/: auxiliary.py  datasets.py
sincomp/plot/: __init__.py
sinetym/: __init__.py  auxiliary.py  compare.py  datasets.py  models.py  phonology.py  plot.py  preprocess.py  similarity.py  xiaoxuetang_char_info.csv  xiaoxuetang_dialect_info.csv
sinetym/dataset/: __init__.py  xiaoxuetang.py  zhongguoyuyan.py
sinetym/datasets/: __init__.py  common.py  xiaoxue.py  xiaoxuetang.py  zhongguoyuyan.py
sinetym/plot/: geography.py
src/sincomp/: __init__.py  align.py  auxiliary.py  compare.py  datasets.py  models.py  preprocess.py  similarity.py
tensorboard/202102161509/: events.out.tfevents.1613459372.tlinux2.2-py3-tf2-yihuahuang.14300.66.v2
tests/: common.py  test_align.py  test_auxiliary.py  test_datasets.py  test_models.py  test_preprocess.py  test_similarity.py
(+48 files in other folders)
