[build-system]
requires = [
    "setuptools>=60.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "sincomp"
authors = [
    {name = "黄艺华", email = "lernanto@foxmail.com"},
]
description = "A toolset for computation and comparison of Chinese dialects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "OpenCC",
    "numpy",
    "pandas[excel]>=1.5",
    "retry",
    "scipy",
    "scikit-learn>=1.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lernanto/sincomp"
Issues = "https://github.com/lernanto/sincomp/issues"

[project.optional-dependencies]
models = [
    "tensorboard>=2.0",
    "torch>=2.0",
]
parser = [
    "sklearn-crfsuite",
]
plot = [
    "cartopy",
    "folium",
    "geopandas",
    "matplotlib",
    "plotly",
    "seaborn",
]
test = [
    "sincomp[models,parser,plot]"
]

[tool.setuptools_scm]
